--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "lib/index",
   "license": "MIT",
   "scripts": {
-    "dev": "docz dev",
-    "build": "docz build"
+    "dev:docz": "docz dev",
+    "build:docz": "docz build",
+    "build:rollup": "rollup -c scripts/rollup.config.js",
+    "start": "npm run dev:docz"
   },
   "repository": {
     "type": "git",
@@ -18,11 +20,31 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "docz": "^0.9.6",
-    "docz-core": "^0.9.6",
-    "docz-plugin-css": "^0.9.6",
+    "@types/antd": "^1.0.0",
+    "@types/react": "^16.4.10",
+    "css-loader": "^1.0.0",
+    "docz": "^0.10.2",
+    "docz-core": "^0.10.2",
+    "docz-plugin-css": "^0.10.2",
+    "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "typescript": "^3.0.1"
+    "rollup": "^0.64.1",
+    "rollup-plugin-buble": "^0.19.2",
+    "rollup-plugin-commonjs": "^9.1.5",
+    "rollup-plugin-less": "^0.1.4",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-postcss": "^1.6.2",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-typescript2": "^0.16.1",
+    "rollup-plugin-uglify": "^4.0.0",
+    "style-loader": "^0.22.1",
+    "ts-loader": "^4.4.2",
+    "typescript": "^3.0.1",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.16.5",
+    "webpack-cleanup-plugin": "^0.5.1",
+    "webpackbar": "^2.6.2"
   }
 }
