--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-decorators": "^7.0.0-rc.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-rc.1",
+    "@babel/preset-env": "^7.0.0-rc.1",
+    "@babel/preset-react": "^7.0.0-rc.1",
     "@types/antd": "^1.0.0",
     "@types/react": "^16.4.10",
     "css-loader": "^1.0.0",
