--- a/package.json
+++ b/package.json
@@ -15,39 +15,39 @@
     "url": "git://github.com/nnecec/arrow.git"
   },
   "dependencies": {
-    "antd": "^3.8.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "antd": "^3.9.3",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-decorators": "^7.1.0",
     "@types/antd": "^1.0.0",
-    "@types/react": "^16.4.10",
+    "@types/react": "^16.4.14",
     "css-loader": "^1.0.0",
-    "docz": "^0.10.3",
-    "docz-core": "^0.10.3",
-    "docz-plugin-css": "^0.10.3",
-    "file-loader": "^1.1.11",
+    "docz": "^0.11.2",
+    "docz-core": "^0.11.2",
+    "docz-plugin-css": "^0.11.0",
+    "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "rollup": "^0.64.1",
+    "rollup": "^0.66.2",
     "rollup-plugin-buble": "^0.19.2",
-    "rollup-plugin-commonjs": "^9.1.5",
+    "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-less": "^0.1.4",
-    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-typescript2": "^0.16.1",
-    "rollup-plugin-uglify": "^4.0.0",
-    "style-loader": "^0.22.1",
-    "ts-loader": "^4.4.2",
+    "rollup-plugin-typescript2": "^0.17.0",
+    "rollup-plugin-uglify": "^6.0.0",
+    "style-loader": "^0.23.0",
+    "ts-loader": "^5.2.1",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.14.0",
-    "typescript": "^3.0.1",
-    "url-loader": "^1.1.0",
-    "webpack": "^4.16.5",
+    "tslint-config-prettier": "^1.15.0",
+    "typescript": "^3.0.3",
+    "url-loader": "^1.1.1",
+    "webpack": "^4.20.2",
     "webpack-cleanup-plugin": "^0.5.1",
-    "webpackbar": "^2.6.2"
+    "webpackbar": "^2.6.3"
   }
 }
