--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "hawkeye-arrow",
   "description": "I'm hawkeye's Arrow.",
-  "version": "0.0.1",
-  "main": "lib/index",
+  "version": "0.0.3",
+  "main": "dist/index",
   "license": "MIT",
   "scripts": {
     "dev:docz": "docz dev",
@@ -30,9 +30,9 @@
     "html-loader": "^0.5.5",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "rollup": "^0.66.4",
+    "rollup": "^0.66.6",
     "rollup-plugin-buble": "^0.19.4",
-    "rollup-plugin-commonjs": "^9.1.8",
+    "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-less": "^0.1.4",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-postcss": "^1.6.2",
@@ -43,8 +43,8 @@
     "ts-loader": "^5.2.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.1.1",
-    "url-loader": "^1.1.1",
+    "typescript": "^3.1.3",
+    "url-loader": "^1.1.2",
     "webpack": "^4.20.2",
     "webpack-cleanup-plugin": "^0.5.1",
     "webpackbar": "^2.6.3"
