--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "antd": "^3.10.0",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "styled-components": "^4.0.2"
   },
   "devDependencies": {
     "@types/antd": "^1.0.0",
@@ -26,8 +27,6 @@
     "docz": "^0.12.5",
     "docz-core": "^0.12.5",
     "docz-plugin-css": "^0.11.0",
-    "file-loader": "^2.0.0",
-    "html-loader": "^0.5.5",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "rollup": "^0.66.6",
@@ -40,13 +39,8 @@
     "rollup-plugin-typescript2": "^0.17.1",
     "rollup-plugin-uglify": "^6.0.0",
     "style-loader": "^0.23.1",
-    "ts-loader": "^5.2.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.1.3",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.20.2",
-    "webpack-cleanup-plugin": "^0.5.1",
-    "webpackbar": "^2.6.3"
+    "typescript": "^3.1.3"
   }
 }
