--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:docz": "docz dev",
     "build:docz": "docz build",
     "build:rollup": "rollup -c scripts/rollup.config.js",
-    "start": "npm run dev:docz"
+    "start": "npm run dev:docz",
+    "gen:c": "ts-node scripts/generateComponent.ts"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "docz": "^0.12.5",
     "docz-core": "^0.12.5",
     "docz-plugin-css": "^0.11.0",
+    "inquirer": "^6.2.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "rollup": "^0.66.6",
@@ -42,6 +44,7 @@
     "rollup-plugin-typescript2": "^0.17.1",
     "rollup-plugin-uglify": "^6.0.0",
     "style-loader": "^0.23.1",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "typescript": "^3.1.3"
