--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "outDir": "dist",
     "rootDir": "src",
     "target": "es6",
+    "module": "ES2015",
     "moduleResolution": "node",
     "jsx": "react",
     "sourceMap": true,
@@ -17,7 +18,7 @@
     ],
     "typeRoots": [
       "node_modules/@types"
-    ]
+    ],
   },
   "include": [
     "src/**/*"
