--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
     "lodash": "^4.17.11",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "styled-components": "^4.0.2"
+    "styled-components": "^4.0.3"
   },
   "devDependencies": {
     "@types/antd": "^1.0.0",
     "@types/enzyme": "^3.1.14",
-    "@types/inquirer": "^0.0.43",
-    "@types/jest": "^23.3.8",
+    "@types/inquirer": "0.0.43",
+    "@types/jest": "^23.3.9",
     "@types/lodash": "^4.14.117",
     "@types/node": "^10.12.1",
-    "@types/react": "^16.4.16",
+    "@types/react": "^16.4.18",
     "buble": "0.19.4",
     "css-loader": "^1.0.1",
-    "docz": "^0.12.5",
-    "docz-core": "^0.12.5",
+    "docz": "^0.12.7",
+    "docz-core": "^0.12.7",
     "docz-plugin-css": "^0.11.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
@@ -46,7 +46,7 @@
     "rollup": "^0.66.6",
     "rollup-plugin-buble": "^0.19.4",
     "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-less": "^0.1.4",
+    "rollup-plugin-less": "^0.1.5",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-replace": "^2.1.0",
