--- a/package.json
+++ b/package.json
@@ -18,19 +18,21 @@
     "url": "git://github.com/nnecec/arrow.git"
   },
   "dependencies": {
-    "antd": "^3.10.3",
+    "antd": "^3.10.4",
     "lodash": "^4.17.11",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "styled-components": "^4.0.3"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.1.2",
+    "@babel/plugin-syntax-decorators": "^7.1.0",
     "@types/antd": "^1.0.0",
     "@types/enzyme": "^3.1.14",
     "@types/inquirer": "0.0.43",
     "@types/jest": "^23.3.9",
     "@types/lodash": "^4.14.117",
-    "@types/node": "^10.12.1",
+    "@types/node": "^10.12.2",
     "@types/react": "^16.4.18",
     "buble": "0.19.4",
     "css-loader": "^1.0.1",
@@ -44,7 +46,7 @@
     "jest": "^23.6.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "rollup": "^0.66.6",
+    "rollup": "^0.67.0",
     "rollup-plugin-buble": "^0.19.4",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-less": "^0.1.5",
@@ -55,9 +57,10 @@
     "rollup-plugin-uglify": "^6.0.0",
     "style-loader": "^0.23.1",
     "ts-jest": "^23.10.4",
+    "ts-loader": "^5.3.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.1.5"
+    "typescript": "^3.1.6"
   }
 }
