--- a/package.json
+++ b/package.json
@@ -18,49 +18,49 @@
     "url": "git://github.com/nnecec/arrow.git"
   },
   "dependencies": {
-    "antd": "^3.10.4",
+    "antd": "^3.10.8",
     "lodash": "^4.17.11",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "styled-components": "^4.0.3"
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "styled-components": "^4.1.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.1.2",
+    "@babel/plugin-proposal-decorators": "^7.1.6",
     "@babel/plugin-syntax-decorators": "^7.1.0",
     "@types/antd": "^1.0.0",
-    "@types/enzyme": "^3.1.14",
+    "@types/enzyme": "^3.1.15",
     "@types/inquirer": "0.0.43",
     "@types/jest": "^23.3.9",
-    "@types/lodash": "^4.14.117",
-    "@types/node": "^10.12.2",
-    "@types/react": "^16.4.18",
-    "buble": "0.19.4",
+    "@types/lodash": "^4.14.118",
+    "@types/node": "^10.12.9",
+    "@types/react": "^16.7.6",
+    "buble": "^0.19.6",
     "css-loader": "^1.0.1",
-    "docz": "^0.12.9",
-    "docz-core": "^0.12.9",
+    "docz": "^0.12.12",
+    "docz-core": "^0.12.12",
     "docz-plugin-css": "^0.11.0",
     "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "enzyme-to-json": "^3.3.4",
     "inquirer": "^6.2.0",
     "jest": "^23.6.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "rollup": "^0.67.0",
+    "rollup": "^0.67.3",
     "rollup-plugin-buble": "^0.19.4",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-less": "^0.1.5",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-typescript2": "^0.17.2",
+    "rollup-plugin-typescript2": "^0.18.0",
     "rollup-plugin-uglify": "^6.0.0",
     "style-loader": "^0.23.1",
     "ts-jest": "^23.10.4",
     "ts-loader": "^5.3.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
+    "tslint-config-prettier": "^1.16.0",
     "typescript": "^3.1.6"
   }
 }
