--- a/package.json
+++ b/package.json
@@ -18,49 +18,50 @@
     "url": "git://github.com/nnecec/arrow.git"
   },
   "dependencies": {
-    "antd": "^3.10.9",
+    "antd": "^3.11.2",
     "lodash": "^4.17.11",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "styled-components": "^4.1.1"
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.1.6",
-    "@babel/plugin-syntax-decorators": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.2.2",
+    "@babel/plugin-syntax-decorators": "^7.2.0",
+    "@emotion/core": "^10.0.5",
+    "@emotion/styled": "^10.0.5",
     "@types/antd": "^1.0.0",
     "@types/enzyme": "^3.1.15",
     "@types/inquirer": "0.0.43",
-    "@types/jest": "^23.3.9",
-    "@types/lodash": "^4.14.118",
-    "@types/node": "^10.12.10",
-    "@types/react": "^16.7.7",
+    "@types/jest": "^23.3.10",
+    "@types/lodash": "^4.14.119",
+    "@types/node": "^10.12.18",
+    "@types/react": "^16.7.17",
     "buble": "^0.19.6",
-    "css-loader": "^1.0.1",
-    "docz": "^0.12.13",
-    "docz-core": "^0.12.13",
+    "css-loader": "^2.0.1",
+    "docz": "^0.13.5",
     "docz-plugin-css": "^0.11.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0",
-    "enzyme-to-json": "^3.3.4",
-    "inquirer": "^6.2.0",
+    "docz-theme-default": "^0.13.5",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-to-json": "^3.3.5",
+    "inquirer": "^6.2.1",
     "jest": "^23.6.0",
-    "less": "^3.8.1",
+    "less": "^3.9.0",
     "less-loader": "^4.1.0",
-    "rollup": "^0.67.3",
-    "rollup-plugin-buble": "^0.19.4",
+    "rollup": "^0.68.1",
+    "rollup-plugin-buble": "^0.19.6",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-less": "^0.1.5",
-    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-postcss": "^1.6.3",
     "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-typescript2": "^0.18.0",
+    "rollup-plugin-typescript2": "^0.18.1",
     "rollup-plugin-uglify": "^6.0.0",
     "style-loader": "^0.23.1",
     "ts-jest": "^23.10.5",
-    "ts-loader": "^5.3.0",
+    "ts-loader": "^5.3.1",
     "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.16.0",
-    "typescript": "^3.1.6"
+    "tslint": "^5.12.0",
+    "tslint-config-prettier": "^1.17.0",
+    "typescript": "^3.2.2"
   }
 }
