--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "dist",
     "rootDir": "src",
     "target": "es6",
-    "module": "commonjs",
+    "module": "ES2015",
     "moduleResolution": "node",
     "jsx": "react",
     "sourceMap": true,
