feat: migrate to new version

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "hawkeye-arrow",
-  "description": "I'm hawkeye's Arrow.",
-  "version": "0.0.4",
-  "main": "dist/index",
+  "name": "gcd",
+  "description": "I love gcd.",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "build": "yarn build:rollup",
     "build:docz": "docz build",
-    "build:rollup": "rollup -c scripts/rollup.config.js",
+    "build:commonjs": "rollup -c scripts/rollup.config.js",
+    "build:es": "rm -rf es && tsc -p tsconfig.es.json",
     "dev:docz": "docz dev",
     "start": "yarn dev:docz",
     "shot": "ts-node scripts/shot",
@@ -15,53 +15,45 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/nnecec/arrow.git"
+    "url": "git://github.com/nnecec/gcd.git"
   },
   "dependencies": {
-    "antd": "^3.15.0",
-    "lodash": "^4.17.11",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
     "@babel/plugin-syntax-decorators": "^7.2.0",
-    "@emotion/core": "^10.0.7",
-    "@emotion/styled": "^10.0.7",
-    "@types/antd": "^1.0.0",
-    "@types/enzyme": "^3.9.0",
-    "@types/inquirer": "0.0.44",
     "@types/jest": "^24.0.11",
-    "@types/lodash": "^4.14.122",
-    "@types/node": "^11.11.0",
-    "@types/react": "^16.8.7",
-    "buble": "^0.19.6",
+    "@types/lodash": "^4.14.123",
+    "@types/node": "^11.13.7",
+    "@types/react": "^16.8.14",
+    "buble": "^0.19.7",
     "css-loader": "^2.1.1",
-    "docz": "^0.13.7",
-    "docz-plugin-css": "^0.11.0",
-    "docz-theme-default": "^0.13.7",
+    "docz": "^1.0.4",
+    "docz-theme-default": "^1.0.4",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.10.0",
+    "enzyme-adapter-react-16": "^1.12.1",
     "enzyme-to-json": "^3.3.5",
-    "inquirer": "^6.2.2",
-    "jest": "^24.3.1",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "rollup": "^1.6.0",
+    "inquirer": "^6.3.1",
+    "jest": "^24.7.1",
+    "rollup": "^1.10.1",
     "rollup-plugin-buble": "^0.19.6",
-    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-less": "^1.1.2",
-    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-typescript2": "^0.19.3",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-typescript2": "^0.21.0",
     "rollup-plugin-uglify": "^6.0.2",
+    "sass": "^1.19.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "ts-jest": "^24.0.0",
-    "ts-loader": "^5.3.3",
-    "ts-node": "^8.0.3",
-    "tslint": "^5.13.1",
+    "ts-jest": "^24.0.2",
+    "ts-loader": "^5.4.3",
+    "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.4.5"
   }
 }
