modify bundle ways

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,10 @@
     "outDir": "dist",
     "rootDir": "src",
     "target": "es6",
-    "module": "ES2015",
     "moduleResolution": "node",
     "jsx": "react",
     "sourceMap": true,
-    "removeComments": false,
+    "removeComments": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
