--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "build": "yarn build:rollup",
+    "build": "ts-node scripts/build.ts",
     "build:docz": "docz build",
-    "build:commonjs": "rollup -c scripts/rollup.config.js",
-    "build:es": "rm -rf es && tsc -p tsconfig.es.json",
+    "build:commonjs": "rollup -c configs/rollup.config.js",
+    "build:es": "rm -rf es && tsc -p configs/tsconfig.es.json",
+    "build:es.css": "gulp --gulpfile scripts/build.css.js",
     "dev:docz": "docz dev",
     "start": "yarn dev:docz",
     "shot": "ts-node scripts/shot",
@@ -19,7 +20,9 @@
   },
   "dependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "reactstrap": "^8.0.0",
+    "vant": "^1.6.15"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.0",
@@ -35,8 +38,17 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "enzyme-to-json": "^3.3.5",
+    "execa": "^1.0.0",
+    "fs-extra": "^7.0.1",
+    "gulp": "^4.0.1",
+    "gulp-csso": "^3.0.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-sass": "^4.0.2",
     "inquirer": "^6.3.1",
     "jest": "^24.7.1",
+    "node-sass": "^4.11.0",
     "rollup": "^1.10.1",
     "rollup-plugin-buble": "^0.19.6",
     "rollup-plugin-commonjs": "^9.3.4",
