--- a/configs/tsconfig.es.json
+++ b/configs/tsconfig.es.json
@@ -11,7 +11,7 @@
   "exclude": [
     "../node_modules",
     "../src/**/index.ts",
-    "../src/index.ts"
+    "../src/index.ts",
   ],
   "include": [
     "../src/**/*"
