--- a/package.json
+++ b/package.json
@@ -6,30 +6,32 @@
   "scripts": {
     "build": "ts-node scripts/build.ts",
     "build:docz": "docz build",
-    "build:commonjs": "rollup -c configs/rollup.config.js",
     "build:es": "tsc -p configs/tsconfig.es.json",
     "build:es.css": "gulp --gulpfile scripts/build.css.js",
+    "build:umd":"rollup -c configs/rollup.config.js",
     "dev:docz": "docz dev",
     "start": "yarn dev:docz",
     "shot": "ts-node scripts/shot",
     "test": "jest --config jest.config.js"
   },
+  "files": [
+    "es",
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/nnecec/gcd.git"
   },
   "dependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "reactstrap": "^8.0.0",
-    "vant": "^1.6.15"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "@babel/plugin-syntax-decorators": "^7.2.0",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.123",
-    "@types/node": "^11.13.7",
+    "@types/node": "^12.0.0",
     "@types/react": "^16.8.14",
     "buble": "^0.19.7",
     "css-loader": "^2.1.1",
@@ -62,7 +64,6 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-jest": "^24.0.2",
-    "ts-loader": "^5.4.3",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
